--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<iframe width="100%" height="100px" src="header.html"></iframe>
-Hello world
+<div id="logo"><a href="index.html" target="_parent"> Brian H.</a></div>
+<nav>Home | Projects</nav>
 </body>
 </html>
