--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="css/main.css" type="text/css"/>
 </head>
 <body>
-<iframe width="100%" height="100px" src="header.html"></iframe>
+<iframe class="header" src="header.html"></iframe>
 Hello world
 </body>
 </html>
