--- a/header.html
+++ b/header.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet"  href="css/main.css" type="text/css"/>
+    <link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" type="text/css"/>
+    <script href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" type="text/jsx"/>
+
 </head>
 <body>
 <div id="logo"><a href="index.html" target="_parent"> Brian H.</a></div>
