--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet"  href="css/main.css" type="text/css"/>
     <link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" type="text/css"/>
-    <script href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" type="text/jsx"/>
+    <!--<script href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" type="text/jsx"/>-->
 
 </head>
 <body>
