--- a/header.html
+++ b/header.html
@@ -10,6 +10,6 @@
 </head>
 <body>
 <div id="logo"><a href="index.html" target="_parent"> Brian H.</a></div>
-<nav>Home | Projects</nav>
+<nav><a href="index.html" target="_parent">Home</a> | <a href="presentations.html" target="_parent">Presentations</a></nav>
 </body>
 </html>
