--- a/presentations.html
+++ b/presentations.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Brian Hanley</title>
+    <title>My Presentations</title>
     <link rel="stylesheet"  href="css/main.css" type="text/css"/>
     <link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" type="text/css"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"> </script>
@@ -10,6 +10,6 @@
 </head>
 <body>
 <iframe class="header" src="header.html"></iframe>
-Hello world
+
 </body>
 </html>
