--- a/presentations.html
+++ b/presentations.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 <iframe class="header" src="header.html"></iframe>
-
+<ul>
+    <a href="https://docs.google.com/presentation/d/1WjG7Uu1qqN8in_QAQAFYQSH8yGOr_zhnHcHnQKvsJos/edit?usp=sharing" target="_parent">INFO-I400 Presentation</a>
+</ul>
 </body>
 </html>
