CV JS Testing VI - Return of the File Structure

--- a/Gentleman-v-1.0.0/index.html
+++ b/Gentleman-v-1.0.0/index.html
@@ -58,7 +58,7 @@
               <span class="icon-bar second"></span>
               <span class="icon-bar third"></span>
             </button>
-            <a class="navbar-brand" href="index.html"><img src="../astro/src/images/logo.png" alt="logo" class="img-responsive"></a>
+            <a class="navbar-brand" href="index.html"><img src="../astro/public/images/logo.png" alt="logo" class="img-responsive"></a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -285,11 +285,11 @@ help you for our Friendshiop. </em></p>
         <div class="portfolio_items">
           <div class="portfolio_item design illustration">
             <div class="pos_rel">
-              <img src="../astro/src/images/portfolio_01.jpg" alt="portfolio Image" class="img-responsive"/>
+              <img src="../astro/public/images/portfolio_01.jpg" alt="portfolio Image" class="img-responsive"/>
               <div class="overlay"></div>
               <div class="port_caption">
-                <a href="../astro/src/images/portfolio_big_01.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                <a href="../astro/src/images/portfolio_big_01.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                <a href="../astro/public/images/portfolio_big_01.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                <a href="../astro/public/images/portfolio_big_01.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                 <h4>Project Title Goes Here</h4>
                 <p>Logo Design</p>
               </div>
@@ -297,11 +297,11 @@ help you for our Friendshiop. </em></p>
           </div><!-- portfolio item -->
           <div class="portfolio_item photography vector">
             <div class="pos_rel">
-              <img src="../astro/src/images/portfolio_02.jpg" alt="portfolio Image" class="img-responsive"/>
+              <img src="../astro/public/images/portfolio_02.jpg" alt="portfolio Image" class="img-responsive"/>
               <div class="overlay"></div>
               <div class="port_caption">
-                <a href="../astro/src/images/portfolio_big_02.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                <a href="../astro/src/images/portfolio_big_02.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                <a href="../astro/public/images/portfolio_big_02.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                <a href="../astro/public/images/portfolio_big_02.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                 <h4>Project Title Goes Here</h4>
                 <p>Photography</p>
               </div>
@@ -309,11 +309,11 @@ help you for our Friendshiop. </em></p>
           </div><!-- portfolio item -->
           <div class="portfolio_item design illustration">
             <div class="pos_rel">
-              <img src="../astro/src/images/portfolio_03.jpg" alt="portfolio Image" class="img-responsive"/>
+              <img src="../astro/public/images/portfolio_03.jpg" alt="portfolio Image" class="img-responsive"/>
               <div class="overlay"></div>
               <div class="port_caption">
-                <a href="../astro/src/images/portfolio_big_03.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                <a href="../astro/src/images/portfolio_big_03.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                <a href="../astro/public/images/portfolio_big_03.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                <a href="../astro/public/images/portfolio_big_03.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                 <h4>Project Title Goes Here</h4>
                 <p>Illustration</p>
               </div>
@@ -321,11 +321,11 @@ help you for our Friendshiop. </em></p>
           </div><!-- portfolio item -->
           <div class="portfolio_item  vector">
             <div class="pos_rel">
-              <img src="../astro/src/images/portfolio_04.jpg" alt="portfolio Image" class="img-responsive"/>
+              <img src="../astro/public/images/portfolio_04.jpg" alt="portfolio Image" class="img-responsive"/>
               <div class="overlay"></div>
               <div class="port_caption">
-                <a href="../astro/src/images/portfolio_big_04.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                <a href="../astro/src/images/portfolio_big_04.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                <a href="../astro/public/images/portfolio_big_04.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                <a href="../astro/public/images/portfolio_big_04.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                 <h4>Project Title Goes Here</h4>
                 <p>Vector</p>
               </div>
@@ -333,11 +333,11 @@ help you for our Friendshiop. </em></p>
           </div><!-- portfolio item -->
           <div class="portfolio_item design illustration">
             <div class="pos_rel">
-              <img src="../astro/src/images/portfolio_05.jpg" alt="portfolio Image" class="img-responsive"/>
+              <img src="../astro/public/images/portfolio_05.jpg" alt="portfolio Image" class="img-responsive"/>
               <div class="overlay"></div>
               <div class="port_caption">
-                <a href="../astro/src/images/portfolio_big_05.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                <a href="../astro/src/images/portfolio_big_05.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                <a href="../astro/public/images/portfolio_big_05.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                <a href="../astro/public/images/portfolio_big_05.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                 <h4>Project Title Goes Here</h4>
                 <p>Illustration</p>
               </div>
@@ -345,11 +345,11 @@ help you for our Friendshiop. </em></p>
           </div><!-- portfolio item -->
           <div class="portfolio_item photography">
             <div class="pos_rel">
-              <img src="../astro/src/images/portfolio_06.jpg" alt="portfolio Image" class="img-responsive"/>
+              <img src="../astro/public/images/portfolio_06.jpg" alt="portfolio Image" class="img-responsive"/>
               <div class="overlay"></div>
               <div class="port_caption">
-                <a href="../astro/src/images/portfolio_big_06.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                <a href="../astro/src/images/portfolio_big_06.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                <a href="../astro/public/images/portfolio_big_06.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                <a href="../astro/public/images/portfolio_big_06.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                 <h4>Project Title Goes Here</h4>
                 <p>Photography</p>
               </div>
@@ -448,7 +448,7 @@ help you for our Friendshiop. </em></p>
           <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="blog_item">
               <div class=" post-thumb">
-                <a href="single.html"><img src="../astro/src/images/blog_01.jpg" alt="Blog image" class="img-responsive"></a>
+                <a href="single.html"><img src="../astro/public/images/blog_01.jpg" alt="Blog image" class="img-responsive"></a>
               </div><!-- blog image -->
               <div class=" content">
                 <h4><a href="single.html">Holisticly Incubate Enabled Value.</a></h4>
@@ -464,7 +464,7 @@ help you for our Friendshiop. </em></p>
           <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="blog_item">
               <div class=" post-thumb">
-                <a href="single.html"><img src="../astro/src/images/blog_02.jpg" alt="Blog image" class="img-responsive"></a>
+                <a href="single.html"><img src="../astro/public/images/blog_02.jpg" alt="Blog image" class="img-responsive"></a>
               </div><!-- blog image -->
               <div class=" content">
                 <h4><a href="single.html">Compellingly Foster Premium Benefits.</a></h4>
@@ -572,14 +572,14 @@ help you for our Friendshiop. </em></p>
         </div><!-- section header -->
 
         <div class="client_items">
-          <div><img src="../astro/src/images/client_01.jpg" alt="client image" class="img-responsive"></div>
-          <div><img src="../astro/src/images/client_02.jpg" alt="client image" class="img-responsive"></div>
-          <div><img src="../astro/src/images/client_03.jpg" alt="client image" class="img-responsive"></div>
-          <div><img src="../astro/src/images/client_04.jpg" alt="client image" class="img-responsive"></div>
-          <div><img src="../astro/src/images/client_01.jpg" alt="client image" class="img-responsive"></div>
-          <div><img src="../astro/src/images/client_02.jpg" alt="client image" class="img-responsive"></div>
-          <div><img src="../astro/src/images/client_03.jpg" alt="client image" class="img-responsive"></div>
-          <div><img src="../astro/src/images/client_04.jpg" alt="client image" class="img-responsive"></div>
+          <div><img src="../astro/public/images/client_01.jpg" alt="client image" class="img-responsive"></div>
+          <div><img src="../astro/public/images/client_02.jpg" alt="client image" class="img-responsive"></div>
+          <div><img src="../astro/public/images/client_03.jpg" alt="client image" class="img-responsive"></div>
+          <div><img src="../astro/public/images/client_04.jpg" alt="client image" class="img-responsive"></div>
+          <div><img src="../astro/public/images/client_01.jpg" alt="client image" class="img-responsive"></div>
+          <div><img src="../astro/public/images/client_02.jpg" alt="client image" class="img-responsive"></div>
+          <div><img src="../astro/public/images/client_03.jpg" alt="client image" class="img-responsive"></div>
+          <div><img src="../astro/public/images/client_04.jpg" alt="client image" class="img-responsive"></div>
         </div>
       </div><!-- container -->
     </section>
