--- a/Gentleman-v-1.0.0/home_02.html
+++ b/Gentleman-v-1.0.0/home_02.html
@@ -56,7 +56,7 @@
           <span class="icon-bar third_icon"></span>
         </button>
         <div class="header_image">
-          <a href="index.html"><img src="../astro/src/images/about.jpg" alt="Logo" class="img-responsive"></a>
+          <a href="index.html"><img src="../astro/public/images/about.jpg" alt="Logo" class="img-responsive"></a>
         </div>
 
         <ul class="left_menu nav">
@@ -364,11 +364,11 @@
           <div class="portfolio_items">
             <div class="portfolio_item design illustration">
               <div class="pos_rel">
-                <img src="../astro/src/images/portfolio_01.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../astro/public/images/portfolio_01.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../astro/src/images/portfolio_big_06.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../astro/src/images/portfolio_big_01.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../astro/public/images/portfolio_big_06.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../astro/public/images/portfolio_big_01.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Logo Design</p>
                 </div>
@@ -376,11 +376,11 @@
             </div><!-- portfolio item -->
             <div class="portfolio_item photography vector">
               <div class="pos_rel">
-                <img src="../astro/src/images/portfolio_02.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../astro/public/images/portfolio_02.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../astro/src/images/portfolio_big_02.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../astro/src/images/portfolio_big_02.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../astro/public/images/portfolio_big_02.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../astro/public/images/portfolio_big_02.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Photography</p>
                 </div>
@@ -388,11 +388,11 @@
             </div><!-- portfolio item -->
             <div class="portfolio_item design illustration">
               <div class="pos_rel">
-                <img src="../astro/src/images/portfolio_03.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../astro/public/images/portfolio_03.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../astro/src/images/portfolio_big_03.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../astro/src/images/portfolio_big_03.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../astro/public/images/portfolio_big_03.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../astro/public/images/portfolio_big_03.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Illustration</p>
                 </div>
@@ -400,11 +400,11 @@
             </div><!-- portfolio item -->
             <div class="portfolio_item  vector">
               <div class="pos_rel">
-                <img src="../astro/src/images/portfolio_04.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../astro/public/images/portfolio_04.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../astro/src/images/portfolio_big_04.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../astro/src/images/portfolio_big_04.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../astro/public/images/portfolio_big_04.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../astro/public/images/portfolio_big_04.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Vector</p>
                 </div>
@@ -412,11 +412,11 @@
             </div><!-- portfolio item -->
             <div class="portfolio_item design illustration">
               <div class="pos_rel">
-                <img src="../astro/src/images/portfolio_05.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../astro/public/images/portfolio_05.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../astro/src/images/portfolio_big_05.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../astro/src/images/portfolio_big_05.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../astro/public/images/portfolio_big_05.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../astro/public/images/portfolio_big_05.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Illustration</p>
                 </div>
@@ -424,11 +424,11 @@
             </div><!-- portfolio item -->
             <div class="portfolio_item photography">
               <div class="pos_rel">
-                <img src="../astro/src/images/portfolio_06.jpg" alt="portfolio Image" class="img-responsive"/>
+                <img src="../astro/public/images/portfolio_06.jpg" alt="portfolio Image" class="img-responsive"/>
                 <div class="overlay"></div>
                 <div class="port_caption">
-                  <a href="../astro/src/images/portfolio_big_06.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
-                  <a href="../astro/src/images/portfolio_big_06.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="../astro/public/images/portfolio_big_06.jpg" class="image-icon" data-rel="lightcase:myCollection" title="Project Title"><i class="fa fa-search" aria-hidden="true"></i></a>
+                  <a href="../astro/public/images/portfolio_big_06.jpg"><i class="fa fa-link" aria-hidden="true"></i></a>
                   <h4>Project Title Goes Here</h4>
                   <p>Photography</p>
                 </div>
@@ -527,7 +527,7 @@
             <div class="col-md-6 col-sm-6 col-xs-12">
               <div class="blog_item">
                 <div class=" post-thumb">
-                  <a href="single.html"><img src="../astro/src/images/blog_01.jpg" alt="Blog image" class="img-responsive"></a>
+                  <a href="single.html"><img src="../astro/public/images/blog_01.jpg" alt="Blog image" class="img-responsive"></a>
                 </div><!-- blog image -->
                 <div class=" content">
                   <h4><a href="single.html">Holisticly Incubate Enabled Value.</a></h4>
@@ -543,7 +543,7 @@
             <div class="col-md-6 col-sm-6 col-xs-12">
               <div class="blog_item">
                 <div class=" post-thumb">
-                  <a href="single.html"><img src="../astro/src/images/blog_02.jpg" alt="Blog image" class="img-responsive"></a>
+                  <a href="single.html"><img src="../astro/public/images/blog_02.jpg" alt="Blog image" class="img-responsive"></a>
                 </div><!-- blog image -->
                 <div class=" content">
                   <h4><a href="single.html">Compellingly Foster Premium Benefits.</a></h4>
@@ -653,14 +653,14 @@
           </div><!-- section header -->
 
           <div class="client_items wow fadeInUp" data-wow-duration="2s">
-            <div><img src="../astro/src/images/client_01.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../astro/src/images/client_02.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../astro/src/images/client_03.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../astro/src/images/client_04.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../astro/src/images/client_01.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../astro/src/images/client_02.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../astro/src/images/client_03.jpg" alt="client image" class="img-responsive"></div>
-            <div><img src="../astro/src/images/client_04.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../astro/public/images/client_01.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../astro/public/images/client_02.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../astro/public/images/client_03.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../astro/public/images/client_04.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../astro/public/images/client_01.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../astro/public/images/client_02.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../astro/public/images/client_03.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="../astro/public/images/client_04.jpg" alt="client image" class="img-responsive"></div>
           </div>
         </div><!-- body_container -->
       </section>
