CV JS Testing VII - The JavaScript Awakens

--- a/Gentleman-v-1.0.0/home_02.html
+++ b/Gentleman-v-1.0.0/home_02.html
@@ -730,30 +730,30 @@
 
 
     <!-- jQuery -->
-    <script src="../astro/src/js/jquery.min.js"></script>
-    <script src="../astro/src/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="../astro/public/js/jquery.min.js"></script>
+    <script src="../astro/public/js/bootstrap.min.js" type="text/javascript"></script>
 
     
     <!-- Bootstrap Progressbar -->
-    <script src="../astro/src/js/bootstrap-progressbar.js"></script>
+    <script src="../astro/public/js/bootstrap-progressbar.js"></script>
 
     <!-- Isotop -->
-    <script src="../astro/src/js/isotope.pkgd.min.js"></script>
+    <script src="../astro/public/js/isotope.pkgd.min.js"></script>
 
     <!-- Lightcase -->
-    <script src="../astro/src/js/lightcase.js"></script>
+    <script src="../astro/public/js/lightcase.js"></script>
 
     <!-- Easing -->
-    <script src="../astro/src/js/jquery.easing.min.js"></script>
+    <script src="../astro/public/js/jquery.easing.min.js"></script>
 
     <!-- Slick -->
-    <script src="../astro/src/js/slick.js"></script>
+    <script src="../astro/public/js/slick.js"></script>
 
     <!-- Google Map -->
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAQlXnmyNPAeN3c3HNyWoUMqDk6bDF31Cg"></script>
 
     <!-- Custom -->
-    <script src="../astro/src/js/custom.js"></script>
+    <script src="../astro/public/js/custom.js"></script>
 
 
   </body>
