--- a/Gentleman-v-1.0.0/single.html
+++ b/Gentleman-v-1.0.0/single.html
@@ -12,28 +12,28 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i%7CPoppins:300,400,500,600,700" rel="stylesheet">
 
     <!-- Flaticon -->
-    <link href="../astro/src/flat_icon/flaticon.css" rel="stylesheet">
+    <link href="../astro/public/flat_icon/flaticon.css" rel="stylesheet">
 
     <!-- Font-awesome -->
-    <link href="../astro/src/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../astro/public/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Bootstrap -->
-    <link href="../astro/src/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../astro/public/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Lightcase -->
-    <link href="../astro/src/css/lightcase.css" rel="stylesheet">
+    <link href="../astro/public/css/lightcase.css" rel="stylesheet">
 
     <!-- Slick -->
-    <link href="../astro/src/css/slick.css" rel="stylesheet">
+    <link href="../astro/public/css/slick.css" rel="stylesheet">
 
     <!-- Slick theme -->
-    <link href="../astro/src/css/slick-theme.css" rel="stylesheet">
+    <link href="../astro/public/css/slick-theme.css" rel="stylesheet">
 
     <!-- Style -->
-    <link href="../astro/src/css/style.css" rel="stylesheet">
+    <link href="../astro/public/css/style.css" rel="stylesheet">
 
     <!-- Responsive -->
-    <link href="../astro/src/css/responsive.css" rel="stylesheet">
+    <link href="../astro/public/css/responsive.css" rel="stylesheet">
 
 
   </head>
